added monitoring and fixed monitoring application