@@ -4,11 +4,19 @@ import by.derovi.service_monitoring.visualizer.Table;
 import by.derovi.service_monitoring.visualizer.TerminalRenderer;
 import by.zhabdex.common.Service;
 import by.zhabdex.common.Tools;
+import com.fasterxml.jackson.core.type.TypeReference;
 import org.reflections.Reflections;
+import org.reflections.scanners.MethodAnnotationsScanner;
+import org.reflections.scanners.TypeAnnotationsScanner;
+import org.reflections.util.ConfigurationBuilder;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -17,15 +25,17 @@ public class MonitoringApplication {
     String serviceURL;
     List<Monitoring> monitorings = new ArrayList<>();
     List<MonitoringScanner> scanners = new ArrayList<>();
-    public MonitoringApplication(String packageName, String serviceURL,
-                                 List<MonitoringScanner> scanners,
-                                 List<Monitoring> monitorings)
-            throws IOException, URISyntaxException, InterruptedException {
-        this.packageName = packageName;
-        this.serviceURL = serviceURL;
-        this.scanners = scanners;
-        this.monitorings = monitorings;
-    }
+    TerminalRenderer terminalRenderer;
+//    public MonitoringApplication(String packageName, String serviceURL,
+//                                 List<MonitoringScanner> scanners,
+//                                 List<Monitoring> monitorings)
+//            throws IOException, URISyntaxException, InterruptedException {
+//        this.packageName = packageName;
+//        this.serviceURL = serviceURL;
+//        this.scanners = scanners;
+//        this.monitorings = monitorings;
+//    }
+
     private MonitoringApplication() {}
 
     public static MonitoringApplication.Builder builder() {
@@ -33,22 +43,30 @@ public class MonitoringApplication {
         return newMonitoringApplication.new Builder();
     }
 
-    private List<Service> fetchServices() throws IOException {
-        return  Tools.JSON.readValue(new URL(serviceURL),
-                Tools.JSON.getTypeFactory().constructCollectionType(List.class, Service.class));
+    private List<Service> fetchServices() throws IOException, URISyntaxException, InterruptedException {
+        HttpRequest httpRequest = HttpRequest.newBuilder()
+                .uri(new URI(serviceURL))
+                .GET().build();
+        HttpResponse<String> httpResponse = HttpClient.newBuilder()
+                .build()
+                .send(httpRequest, HttpResponse.BodyHandlers.ofString());
+        return  Tools.JSON.readValue(httpResponse.body(), new TypeReference<>() {});
     }
+
     public void start() throws InterruptedException, IOException {
-        // TODO(Alex): add try catch
-        TerminalRenderer renderer = TerminalRenderer.init(monitorings.size());
-//        for (var i : monitorings) {
-//            Reflections reflection = new Reflections(
-//                    new ConfigurationBuilder().addScanners(
-//                                    new MethodAnnotationsScanner(),
-//                                    new TypeAnnotationsScanner())
-//                            .forPackages(packageName));
-//            monitorings.addAll(i.scan(reflection));
-//        }
-//
+        try {
+            TerminalRenderer terminalRenderer = TerminalRenderer.init(monitorings.size());
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+
+        for (var i : scanners) {
+            Reflections reflection = new Reflections(
+                    new ConfigurationBuilder().addScanners(new MethodAnnotationsScanner(), new TypeAnnotationsScanner())
+                    .forPackages(packageName));
+            monitorings.addAll(i.scan(reflection));
+        }
+
         while (true) {
             try {
                 List<Service> services = fetchServices();
@@ -57,12 +75,11 @@ public class MonitoringApplication {
                     i.update(services);
                     tables.add(i.getStatistics());
                 }
-                renderer.render(tables);
+                terminalRenderer.render(tables);
                 Thread.sleep(1000);
             } catch (Exception e) {
                 e.printStackTrace();
             }
-
         }
     }
 
@@ -84,11 +101,8 @@ public class MonitoringApplication {
             return this;
         }
 
-        public MonitoringApplication start() throws IOException, URISyntaxException, InterruptedException {
-            scanners.forEach(scanner ->
-                    monitorings.addAll(
-                            scanner.scan(new Reflections(packageName))));
-            return new MonitoringApplication(packageName, serviceURL, scanners, monitorings);
+        public MonitoringApplication build() {
+            return MonitoringApplication.this;
         }
     }
 
